fix: order dto tests to match user flow